# pyToDo

./: .gitignore  README.md  pyproject.toml
src/pyToDo/: __init__.py  app.py  example.py  tasks.py
src/themes/: dark.json
